@@ -1,0 +1,2 @@
+#define FUNC __ieee754_exp10
+#include <e_acos.c>
