@@ -1,0 +1,2 @@
+#define FUNC __ieee754_exp10f
+#include <e_acosf.c>
